<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>webots_ca_bridge</name>
  <version>0.1.0</version>
  <description>
    ROS2 bridge between the Webots vision-based CA simulation and RViz2.
    Receives UDP state packets from the Webots RobotController and re-publishes
    as standard ROS2 messages (Odometry, LaserScan, Path, TF, Markers).
  </description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
